tests/NormalTests/paczka2/big_fuzzy/26206270.err
Error in line 7: l7HS A235 1,2
Error in line 10: 19fl8qA A235 37,7
Error in line 24: A797 S27 15,7
Error in line 35: a6wV S27 84,0
Error in line 55: iHcd8yP A797 41,5
Error in line 41: l7HS A797 73,0
Error in line 58: l7HS S823 64,2
Error in line 62: l7HS S27 23,7
Error in line 61: IGV2zfts A235 27,3
Error in line 69: A797 A235 418,3
Error in line 81: 19fl8qA S823 98,0
Error in line 89: IGV2zfts A235 22,0
Error in line 88: 19fl8qA A235 42,6
Error in line 78: FhemBhkn A797 100,6
Error in line 95: A797 S27 166,2
Error in line 118: 19fl8qA S27 103,3
Error in line 120: IGV2zfts A235 90,7
Error in line 130: l7HS S27 66,50
Error in line 134: a6wV A797 24,8
Error in line 139: a6wV S27 26,2
Error in line 144: a6wV A797 9,1
Error in line 147: 19fl8qA A797 14,5
Error in line 148: a6wV S27 97,8
Error in line 156: iHcd8yP A797 4,4
Error in line 162: IGV2zfts A235 89,0
Error in line 164: l7HS S823 71,4
Error in line 163: IGV2zfts S27 50,8
Error in line 169: a6wV S27 1,2
Error in line 171: a6wV S823 70,2
Error in line 208: iHcd8yP A235 -1,4
Error in line 204: IGV2zfts A797 190,9
Error in line 220: iHcd8yP A235 22,5
Error in line 218: IGV2zfts S27 38,5
Error in line 235: iHcd8yP A235 22,6
Error in line 196: A797 S27 127,8
Error in line 240: A797 S823 40,6
Error in line 245: IGV2zfts A235 66,2
Error in line 231: l7HS A797 101,7
Error in line 239: iHcd8yP S823 46,5
